fixxed button gap

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* color:white */
 }
 
 .container{
@@ -71,10 +70,10 @@ h2, h1, h3{
     height: 70%;
     border-radius: 20px;
     display: grid;
-    grid-template-rows: repeat(5,15%);
-    grid-template-columns: repeat(4,20%);
-    grid-gap: 20px;
-    padding: 20px;
+    grid-template-rows: repeat(5,19%);
+    grid-template-columns: repeat(4,23%);
+    grid-gap: 10px;
+    padding: 10px;
 }
 button{
     border-radius: 20px;
